--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/estilo.css">
     <enlace href="https: //fonts.googleapis.com/css2? family= Roboto & display=swap" rel="hoja de estilo">
-        <link rel="icon" type="image/x-icon" href="asset/logo.ico" />
+        <link rel="icon" type="image/x-icon" href="../PreEntrega3Pintos/asset/logo.ico" />
     <meta name="description" content="Eukinetic, tu lugar para entrenar. Movimiento salud y calidad de vida." >
     <meta name="keywords" content="ENTRENAMIENTO, ACTIVIDAD FISICA, SALUD, MOVIMIENTO, TREKKING, NATURALEZA" >
     <title> Eukinetic </title>
@@ -16,7 +16,7 @@
 <body>
     <header class="header">
         <div class="logo-header">
-            <a href=""> <img src="asset/logo.png" alt="logo"></a>
+            <a href=""> <img src="../PreEntrega3Pintos/asset/logo.png" alt="logo"></a>
         </div>
         <div class= "nav-menu">
             <input type="checkbox" id="check">
