entrega 3 pintos 17:27hs

--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> 
     <link rel="stylesheet" href="../style/estilo.css">
-    <meta name="description" content="Eukinetic, tu lugar para entrenar. Movimiento salud y calidad de vida." >
+    <meta name="description" content="Eukinetic, tu lugar para entrenar. Este espacio esta destinado a mejorar la salud y la calidad de vida a traves del movimiento. Te esperamos. Movimiento salud y calidad de vida." >
     <meta name="keywords" content="ENTRENAMIENTO, ACTIVIDAD FISICA, SALUD, MOVIMIENTO, TREKKING, NATURALEZA" >
     <link rel="icon" type="image/x-icon" href="../asset/logo.ico" />
     <title>Contactenos</title>
@@ -48,7 +48,7 @@
         
                 <div class="mb-3 mt-5">
                   <label for="exampleInputEmail1" class="form-label">Nombre y Apellido</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                  <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                   <div id="emailHelp" ></div>
                 </div>
                 <div class="mb-3">
@@ -58,7 +58,7 @@
                   </div>
                   <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label">Asunto</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                     <div id="emailHelp" ></div>
                   </div>
 
