--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style/estilo.css">
     <enlace href="https: //fonts.googleapis.com/css2? family= Roboto & display=swap" rel="hoja de estilo">
         <link rel="icon" type="image/x-icon" href="../PreEntrega3Pintos/asset/logo.ico" />
-    <meta name="description" content="Eukinetic, tu lugar para entrenar. Movimiento salud y calidad de vida." >
+        <meta name="description" content="Eukinetic, tu lugar para entrenar. Este espacio esta destinado a mejorar la salud y la calidad de vida a traves del movimiento. Te esperamos. Movimiento salud y calidad de vida." >
     <meta name="keywords" content="ENTRENAMIENTO, ACTIVIDAD FISICA, SALUD, MOVIMIENTO, TREKKING, NATURALEZA" >
     <title> Eukinetic </title>
 </head>  
