--- a/pages/sobre-nosotros.html
+++ b/pages/sobre-nosotros.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style/estilo.css">
-    <meta name="description" content="Eukinetic, tu lugar para entrenar. Movimiento salud y calidad de vida." >
+    <meta name="description" content="Eukinetic, tu lugar para entrenar. Este espacio esta destinado a mejorar la salud y la calidad de vida a traves del movimiento. Te esperamos. Movimiento salud y calidad de vida." >
     <meta name="keywords" content="ENTRENAMIENTO, ACTIVIDAD FISICA, SALUD, MOVIMIENTO, TREKKING, NATURALEZA" >
     <link rel="icon" type="image/x-icon" href="../asset/logo.ico" />
     <title>Sobre Nosotros </title>
