--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header class="header">
         <div class="logo-header">
-            <a href=""> <img src="../PreEntrega3Pintos/asset/logo.png" alt="logo"></a>
+            <a href="index.html"> <img src="../PreEntrega3Pintos/asset/logo.png" alt="logo"></a>
         </div>
         <div class= "nav-menu">
             <input type="checkbox" id="check">
@@ -75,18 +75,15 @@
 
         <section id="social">
         <div class="insta">
-            <!-- logo-->
-            <img src="asset/instagram.png" alt="Logo- Insta">
+            <a href="https://www.instagram.com/" target="_blank"> <img src="asset/instagram.png" alt="Logo- Insta"> </a>
         </div>
 
         <div class="facebook">
-            <!-- logo-->
-            <img src="asset/facebook.png" alt="Logo-Face">
+            <a href="https://www.facebook.com/" target="_blank"> <img src="asset/facebook.png" alt="Logo-Face"></a>
         </div>
 
         <div class="wsp">
-            <!-- logo-->
-            <img src="asset/whatsapp.png" alt="Logo-Wsp">
+            <a href="https://web.whatsapp.com/" target="_blank"><img src="asset/whatsapp.png" alt="Logo-Wsp"> </a>
         </div>
 
     </section>
