--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../style/estilo.css">
     <meta name="description" content="Eukinetic, tu lugar para entrenar. Este espacio esta destinado a mejorar la salud y la calidad de vida a traves del movimiento. Te esperamos. Movimiento salud y calidad de vida." >
     <meta name="keywords" content="ENTRENAMIENTO, ACTIVIDAD FISICA, SALUD, MOVIMIENTO, TREKKING, NATURALEZA" >
-    <link rel="icon" type="image/x-icon" href="../asset/logo.ico" />
+    <link rel="icon" type="image/x-icon" href="../asset/favicon.ico" />
     <title>Servicios</title>
 </head>
 
