--- a/index.html
+++ b/index.html
@@ -6,17 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/estilo.css">
-    <enlace href="https: //fonts.googleapis.com/css2? family= Roboto & display=swap" rel="hoja de estilo">
-        <link rel="icon" type="image/x-icon" href="../PreEntrega3Pintos/asset/logo.ico" />
-        <meta name="description" content="Eukinetic, tu lugar para entrenar. Este espacio esta destinado a mejorar la salud y la calidad de vida a traves del movimiento. Te esperamos. Movimiento salud y calidad de vida." >
+    <meta name="description" content="Eukinetic, tu lugar para entrenar. Este espacio esta destinado a mejorar la salud y la calidad de vida a traves del movimiento. Te esperamos. Movimiento salud y calidad de vida." >
     <meta name="keywords" content="ENTRENAMIENTO, ACTIVIDAD FISICA, SALUD, MOVIMIENTO, TREKKING, NATURALEZA" >
+    <link rel="icon" type="image/x-icon" href="asset/favicon.ico" />
     <title> Eukinetic </title>
 </head>  
 
 <body>
     <header class="header">
         <div class="logo-header">
-            <a href="index.html"> <img src="../PreEntrega3Pintos/asset/logo.png" alt="logo"></a>
+            <a href="index.html"> <img src="asset/logo.png" alt="logo"></a>
         </div>
         <div class= "nav-menu">
             <input type="checkbox" id="check">
@@ -30,7 +29,7 @@
                 <li><a href="pages/sobre-nosotros.html"> Sobre nosotros </a></li>
                 <li><a href="pages/servicios.html"> Servicios </a></li>
                 <li><a href="pages/multimedia.html"> Multimedia </a></li>
-                <li><a href="pages/contacto.html"> Contacto</a></li>
+                <li><a href="pages/Contacto.html"> Contacto</a></li>
             </ul>
         </div>
         
